# prompts

./: Cargo.toml  README.md
llm_client/: Cargo.toml  ai.codestory.llm_client.db
llm_client/.sqlx/: query-08c2149206ecf5f799ce8526b2fdc75a6e9dbd96776b176fab0b8ef5328a94a2.json  query-d37e4c0d93b0f19a43c5a44ac3632276bfe4bc92c8e22b52dda337d2be641b1c.json
llm_client/migrations/: 20240117185650_llm_data.sql  20240118143148_llm_data_chat_row.sql
llm_client/src/: broker.rs  config.rs  lib.rs  provider.rs  sqlite.rs
llm_client/src/clients/: codestory.rs  lmstudio.rs  mod.rs  ollama.rs  openai.rs  togetherai.rs  types.rs
llm_client/src/format/: deepseekcoder.rs  mistral.rs  mixtral.rs  mod.rs  types.rs
llm_client/src/format/tokenizer_config/: deepseekcoder.json  mistral.json  mixtral.json
llm_client/src/tokenizer/: tokenizer.rs
llm_client/src/tokenizer/configs/: deepseekcoder.json  mixtral.json
llm_prompts/: Cargo.toml
llm_prompts/src/: lib.rs
llm_prompts/src/answer_model/: mod.rs
llm_prompts/src/chat/: broker.rs
llm_prompts/src/in_line_edit/: broker.rs  doc_helpers.rs  mistral.rs  mod.rs  openai.rs  types.rs
llm_prompts/src/in_line_edit/storage/: mod.rs
llm_prompts/src/reranking/: broker.rs  mistral.rs  mod.rs  openai.rs  types.rs
