[package]
name = "llm_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
anyhow = "1.0.75"
reqwest = "0.11.23"
serde = "1.0.195"
serde_json = "1.0.111"
eventsource-stream = "0.2.3"
futures = "0.3.28"
tokio = { version = "1.32.0", features = ["full"] }
thiserror = "1.0.49"
tokenizers = { version = "0.13.3", default-features = false, features = ["progressbar", "cli", "onig", "esaxx_fast"] }
tiktoken-rs = "0.5.4"
async-openai = "0.14.3"
sqlx = { version = "0.7.2", features = ["sqlite", "migrate", "runtime-tokio-rustls", "chrono", "uuid"]}
